modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/_test-samples/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testns
  labels:
    security.deckhouse.io/pod-policy: restricted
    custom-policy: example
    enforce: deny-all
