modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-selinux/constraints/pss_baseline.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8SeLinux
metadata:
  name: test
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    - apiGroups:
      - apps
      kinds:
      - Deployment
      - StatefulSet
      - DaemonSet
    - apiGroups:
      - ''
      kinds:
      - ReplicationController
    - apiGroups:
      - batch
      kinds:
      - Job
      - CronJob
    namespaceSelector:
      matchExpressions:
      - key: security.deckhouse.io/pod-policy
        operator: In
        values:
        - baseline
        - restricted
  parameters:
    allowedSELinuxOptions:
    - type: container_t
    - type: container_init_t
    - type: container_kvm_t
    - type: container_engine_t
