modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-selinux/rendered/test_samples/pods/001-008-allowed-no-selinux-options.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-no-selinux-options
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
