modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-selinux/rendered/test_samples/pods/002-002-allowed-container-init-t-securitycontext-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-container-init-t-securitycontext-container
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    initContainers:
        - image: busybox
          name: init
          securityContext:
            seLinuxOptions:
                type: container_init_t
