modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-selinux/rendered/test_samples/pods/004-007-allowed-empty-type-securitycontext-pod.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-empty-type-securitycontext-pod
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    securityContext:
        seLinuxOptions:
            type: container_t
