modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-selinux/rendered/test_samples/pods/005-012-disallowed-wrong-type-securitycontext-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-wrong-type-securitycontext-container
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            seLinuxOptions:
                type: spc_t
