modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-selinux/rendered/test_samples/pods/007-011-disallowed-multiple-containers-one-wrong-type.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-multiple-containers-one-wrong-type
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            seLinuxOptions:
                type: container_t
        - image: redis
          name: redis
          securityContext:
            seLinuxOptions:
                type: spc_t
