modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-selinux/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-selinux
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 008-allowed-no-selinux-options
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-008-allowed-no-selinux-options.yaml
        assertions:
          - violations: "no"
      - name: 002-allowed-container-init-t-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-002-allowed-container-init-t-securitycontext-container.yaml
        assertions:
          - violations: "no"
      - name: 004-allowed-container-t-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-004-allowed-container-t-securitycontext-container.yaml
        assertions:
          - violations: "no"
      - name: 007-allowed-empty-type-securitycontext-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-007-allowed-empty-type-securitycontext-pod.yaml
        assertions:
          - violations: "no"
      - name: 012-disallowed-wrong-type-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-012-disallowed-wrong-type-securitycontext-container.yaml
        assertions:
          - violations: "yes"
      - name: 013-disallowed-wrong-type-securitycontext-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-013-disallowed-wrong-type-securitycontext-pod.yaml
        assertions:
          - violations: "yes"
      - name: 011-disallowed-multiple-containers-one-wrong-type
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-011-disallowed-multiple-containers-one-wrong-type.yaml
        assertions:
          - violations: "yes"
      - name: 014-disallowed-ephemeralcontainer-wrong-type-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-014-disallowed-ephemeralcontainer-wrong-type-securitycontext-container.yaml
        assertions:
          - violations: "yes"
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 017-allowed-exact-match-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-017-allowed-exact-match-securitycontext-container.yaml
        assertions:
          - violations: "no"
      - name: 018-allowed-exact-match-securitycontext-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-018-allowed-exact-match-securitycontext-pod.yaml
        assertions:
          - violations: "no"
      - name: 019-allowed-no-selinux-options
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-008-allowed-no-selinux-options.yaml
        assertions:
          - violations: "no"
      - name: 025-disallowed-wrong-type-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/012-025-disallowed-wrong-type-securitycontext-container.yaml
        assertions:
          - violations: "yes"
      - name: 023-disallowed-wrong-level-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-023-disallowed-wrong-level-securitycontext-container.yaml
        assertions:
          - violations: "yes"
      - name: 024-disallowed-wrong-role-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/014-024-disallowed-wrong-role-securitycontext-container.yaml
        assertions:
          - violations: "yes"
      - name: 026-disallowed-wrong-user-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/015-026-disallowed-wrong-user-securitycontext-container.yaml
        assertions:
          - violations: "yes"
      - name: 022-disallowed-multiple-containers-one-wrong
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/016-022-disallowed-multiple-containers-one-wrong.yaml
        assertions:
          - violations: "yes"
  - name: pss-baseline-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 029-033-allowed-by-exception-spc-t-container
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-029-033-allowed-by-exception-spc-t-container-inv-1.yaml
        object: test_samples/pods/017-029-033-allowed-by-exception-spc-t-container.yaml
        assertions:
          - violations: "no"
      - name: 028-031-allowed-by-exception-custom-selinux-options-container
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-028-031-allowed-by-exception-custom-selinux-options-container-inv-1.yaml
        object: test_samples/pods/018-028-031-allowed-by-exception-custom-selinux-options-container.yaml
        assertions:
          - violations: "no"
      - name: 029-036-disallowed-by-exception-type-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-029-033-allowed-by-exception-spc-t-container-inv-1.yaml
        object: test_samples/pods/019-029-036-disallowed-by-exception-type-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 028-034-disallowed-by-exception-level-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-028-031-allowed-by-exception-custom-selinux-options-container-inv-1.yaml
        object: test_samples/pods/020-028-034-disallowed-by-exception-level-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 037-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/021-037-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 029-035-disallowed-by-exception-multiple-containers-one-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-029-033-allowed-by-exception-spc-t-container-inv-1.yaml
        object: test_samples/pods/022-029-035-disallowed-by-exception-multiple-containers-one-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 030-038-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/006-030-038-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/023-030-038-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
